change settings + broken post11

--- a/_notebooks/2019-04-17-post-0004.ipynb
+++ b/_notebooks/2019-04-17-post-0004.ipynb
@@ -10,7 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [paper-implementation]\n",
-    "- image: images/preview/post_004.png\n",
+    "- image: images/preview/post_004.jpeg\n",
     "- badges: false"
    ]
   },
