--- a/_notebooks/2019-11-11-post-0007.ipynb
+++ b/_notebooks/2019-11-11-post-0007.ipynb
@@ -10,7 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [paper-implementation]\n",
-    "- image: images/preview/post_007.\n",
+    "- image: images/preview/post_007.png\n",
     "- badges: false"
    ]
   },
