--- a/_notebooks/2020-07-10-post-0011.ipynb
+++ b/_notebooks/2020-07-10-post-0011.ipynb
@@ -1378,21 +1378,22 @@
    "metadata": {},
    "source": [
     "The final equation we get is as follows:\n",
+    "\n",
     "$$\n",
-    "\\begin{equation*}\n",
     "\\begin{bmatrix}\n",
     "y_1 & 0 & \\cdots & 0 \\\\\n",
     "0 & y_2 & \\cdots & \\vdots \\\\\n",
     "\\vdots & & \\ddots & 0 \\\\\n",
     "0 & \\cdots & 0 & y_{d_l} \n",
     "\\end{bmatrix} = \n",
+    "$$\n",
+    "$$\n",
     "\\begin{bmatrix}\n",
     "n_l*Var(w_1x_1) & 0 & \\cdots & 0 \\\\\n",
     "0 & n_l*Var(w_2x_2) & \\cdots & \\vdots \\\\\n",
     "\\vdots & & \\ddots & 0 \\\\\n",
     "0 & \\cdots & 0 & n_l*Var(w_{d_l}x_{d_l}) \n",
     "\\end{bmatrix}\n",
-    "\\end{equation*}\n",
     "$$"
    ]
   },
@@ -1406,14 +1407,15 @@
     "> Note: $y_l,x_l$ are scalars. $w_l$ is $(1,n_l)$ row-vector. To keep the notation same as the original paper, I did not use the vector notation. From this point on it does not matter much that $w_l$ is a row-vector or not. \n",
     "\n",
     "For the derivation below, I drop subscript *l* (as it would just clutter the equations). I use the standard formula for Variance to expand the above equation as shown.\n",
-    "$$\\begin{equation*}\n",
+    "\n",
+    "$$\n",
     "\\begin{split}\n",
     "Var[y] & = n_l*Var[wx] \\\\\n",
     " & = n_l*\\left(\\mathbb{E}[(wx)^2]-\\mathbb{E}[wx]^2\\right) \\\\\n",
     " & = n_l*\\left(\\mathbb{E}[w^2x^2]-(\\mathbb{E}[w]\\mathbb{E}[x]+Cov(w,x))^2\\right) \\\\\n",
     " & = n_l*\\left(\\underbrace{\\mathbb{E}[w^2]\\mathbb{E}[x^2]+Cov(w^2,x^2)}_{\\mathbb{E}[(wx)^2]}-\\underbrace{(\\mathbb{E}[w]\\mathbb{E}[x]+Cov(w,x))^2}_{\\mathbb{E}[wx]^2}\\right)\n",
     "\\end{split}\n",
-    "\\end{equation*}$$\n",
+    "$$\n",
     "\n",
     "Now we use the fact that $w_l$ and $x_l$ are independent of each other. This means\n",
     "* $Cov(w^2,x^2)=0$\n",
@@ -1674,7 +1676,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 4**: Make the variance constant (=1 in this case would be enough).\n",
+    "**Step 4**: Make the variance constant (=1 in this case would be enough)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\begin{split}\n",
     "\\frac{1+a^2}{2}n_lVar[w_l] &= 1 \\\\\n",
@@ -1715,7 +1723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
