--- a/_posts/2019-04-17-post-0004.md
+++ b/_posts/2019-04-17-post-0004.md
@@ -6,7 +6,7 @@ toc: true
 comments: true
 author: Kushajveer Singh
 categories: [paper-implementation]
-image: images/preview/post_004.png
+image: images/preview/post_004.jpeg
 badges: false
 nb_path: _notebooks/2019-04-17-post-0004.ipynb
 layout: notebook
