--- a/_posts/2019-11-11-post-0007.md
+++ b/_posts/2019-11-11-post-0007.md
@@ -6,7 +6,7 @@ toc: true
 comments: true
 author: Kushajveer Singh
 categories: [paper-implementation]
-image: images/preview/post_007.
+image: images/preview/post_007.png
 badges: false
 nb_path: _notebooks/2019-11-11-post-0007.ipynb
 layout: notebook
