--- a/_posts/2020-07-10-post-0011.md
+++ b/_posts/2020-07-10-post-0011.md
@@ -1654,24 +1654,22 @@ $$</p>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The final equation we get is as follows:
+<p>The final equation we get is as follows:</p>
 $$
-\begin{equation*}
 \begin{bmatrix}
 y_1 &amp; 0 &amp; \cdots &amp; 0 \\
 0 &amp; y_2 &amp; \cdots &amp; \vdots \\
 \vdots &amp; &amp; \ddots &amp; 0 \\
 0 &amp; \cdots &amp; 0 &amp; y_{d_l} 
 \end{bmatrix} = 
+$$$$
 \begin{bmatrix}
 n_l*Var(w_1x_1) &amp; 0 &amp; \cdots &amp; 0 \\
 0 &amp; n_l*Var(w_2x_2) &amp; \cdots &amp; \vdots \\
 \vdots &amp; &amp; \ddots &amp; 0 \\
 0 &amp; \cdots &amp; 0 &amp; n_l*Var(w_{d_l}x_{d_l}) 
 \end{bmatrix}
-\end{equation*}
-$$</p>
-
+$$
 </div>
 </div>
 </div>
@@ -1682,16 +1680,15 @@ $$</p>
 $$Var[y_l] = n_l*Var[w_lx_l]$$
 {% endraw %}
 {% include note.html content='$y_l,x_l$ are scalars. $w_l$ is $(1,n_l)$ row-vector. To keep the notation same as the original paper, I did not use the vector notation. From this point on it does not matter much that $w_l$ is a row-vector or not. ' %}
-For the derivation below, I drop subscript <em>l</em> (as it would just clutter the equations). I use the standard formula for Variance to expand the above equation as shown.
-$$\begin{equation*}
+For the derivation below, I drop subscript <em>l</em> (as it would just clutter the equations). I use the standard formula for Variance to expand the above equation as shown.</p>
+$$
 \begin{split}
 Var[y] &amp; = n_l*Var[wx] \\
  &amp; = n_l*\left(\mathbb{E}[(wx)^2]-\mathbb{E}[wx]^2\right) \\
  &amp; = n_l*\left(\mathbb{E}[w^2x^2]-(\mathbb{E}[w]\mathbb{E}[x]+Cov(w,x))^2\right) \\
  &amp; = n_l*\left(\underbrace{\mathbb{E}[w^2]\mathbb{E}[x^2]+Cov(w^2,x^2)}_{\mathbb{E}[(wx)^2]}-\underbrace{(\mathbb{E}[w]\mathbb{E}[x]+Cov(w,x))^2}_{\mathbb{E}[wx]^2}\right)
 \end{split}
-\end{equation*}$$</p>
-<p>Now we use the fact that $w_l$ and $x_l$ are independent of each other. This means</p>
+$$<p>Now we use the fact that $w_l$ and $x_l$ are independent of each other. This means</p>
 <ul>
 <li>$Cov(w^2,x^2)=0$</li>
 <li>$Cov(w,x)=0$</li>
@@ -1967,14 +1964,19 @@ $$</p>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Step 4</strong>: Make the variance constant (=1 in this case would be enough).
+<p><strong>Step 4</strong>: Make the variance constant (=1 in this case would be enough).</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 $$
 \begin{split}
 \frac{1+a^2}{2}n_lVar[w_l] &amp;= 1 \\
 Var[w_l] &amp;= \frac{2}{1+a^2}
 \end{split}
-$$</p>
-
+$$
 </div>
 </div>
 </div>
