fix typos post-0013

--- a/_posts/2020-11-07-post-0013.md
+++ b/_posts/2020-11-07-post-0013.md
@@ -23,8 +23,8 @@ Formally, we will be trying to answer the following question
 > When does a network structure generalize better than other, even if they have same expressive power?
 
 ## Algorithm point of view
-Let us begin by an observation that the reasoning process resemble algorithms. To solve the reasoning problem of Figure 1, we can come up with the following solution
-1. Find location of all pairs of objects.
+Let us begin with an observation that the reasoning process resembles algorithms. To solve the reasoning problem of Figure 1, we can come up with the following solution
+1. Find the location of all pairs of objects.
 2. Determine the pair that is furthest (this is just a heuristic that you decide).
 3. Return the color of the object.
 
@@ -36,10 +36,10 @@ From the paper,
 The authors of the paper formalize the above as **algorithm alignment**.
 
 ## Algorithm alignment
-Every neural network architecture that we build has an underlying computation structure. MLPs resemble a for loop kind of computation structure as they are applied to vector inputs. In case of GNNs, we aggregate information from the neighbors implying a dynamic programming (DP) type of computation (shown in the paper).
+Every neural network architecture that we build has an underlying computation structure. MLPs resemble a for loop kind of computation structure as they are applied to vector inputs. In the case of GNNs, we aggregate information from the neighbors implying a dynamic programming (DP) type of computation (shown in the paper).
 
 ## How GNNs relate to DP
-Bellman-Ford algorithm [4] is an algorithm used to solve shortest path problem. The main step of the algorithm is
+Bellman-Ford algorithm [4] is an algorithm used to solve the shortest path problem. The main step of the algorithm is
 ```python
 for u in Nodes:
     d[k][u] = min_v d[k-1][v] + cost(v,u)
@@ -62,7 +62,7 @@ $$
 h_u^k = min_v MLP(h_u^{k-1}, h_v^{k-1})
 $$
 
-The above equation now resembles closely with the Bellman-Ford algorithm. If we had used MLP to solve this problem then MLP would have to learn the structure of entire for-loop as its computation structure resembles a for loop which is expensive.
+The above equation now resembles closely the Bellman-Ford algorithm. If we had used MLP to solve this problem then MLP would have to learn the structure of the entire for-loop as its computation structure resembles a for loop which is expensive.
 
 This is the main point of the paper. If we can find a suitable underlying reasoning algorithm for the reasoning task, then we can use neural network structures that better *align* with the underlying algorithm structure. This will make the task easy to learn and improve generalization.
 
@@ -73,9 +73,9 @@ In the paper, they do experiments on four reasoning tasks
 * Monster trainer
 * Subset sum
 
-I try to reproduce the results of maximum value difference task. The task is simple given a vector find the difference of the maximum and minimum value. But why is it important?
+I try to reproduce the results of the maximum value difference task. The task is simple, given a vector find the difference between the maximum and minimum value. But why is it important?
 
-In a lot of reasoning tasks, we are required to answer questions related to summary statistics (like count, min, max). For example, "How many objects are either small cylinders or red things?". In case of GNNs, we can simulate the reasoning algorithm by using MLP to extract features from nodes and then use aggregation to come up with the answer. In this case MLP, has to only learn to extract local features. On the other hand, if we only used MLPs to solve this problem. Then the MLP must learn a complex for-loop and therefore needs more data to converge.
+In a lot of reasoning tasks, we are required to answer questions related to summary statistics (like count, min, max). For example, "How many objects are either small cylinders or red things?". In the case of GNNs, we can simulate the reasoning algorithm by using MLP to extract features from nodes and then use aggregation to come up with the answer. In this case, MLP has to only learn to extract local features. On the other hand, if we only used MLPs to solve this problem. Then the MLP must learn a complex for-loop and therefore needs more data to converge.
 
 The maximum value difference task is stated as:
 1. A training sample consists of 25 treasures ($X$).
@@ -127,7 +127,7 @@ The code to generate the data is in [min_max_graph_data.py](https://github.com/K
 The best GNN model got to 98.5% accuracy (maybe with hyperparameter search 100% accuracy can be achieved). But it demonstrates the idea that GNN can easily learn summary statistics which are a key component of reasoning problems.
 
 ## Conclusion
-The concept of algorithm alignment can be applied to any reasoning algorithm. If we can come up with a suitable algorithm to solve the reasoning problem, then we can design a network with similar structure to learn it. If we have no prior knowledge about the structure of the reasoning algorithm then neural architecture search over algorithm structures will be needed.
+The concept of algorithm alignment can be applied to any reasoning algorithm. If we can come up with a suitable algorithm to solve the reasoning problem, then we can design a network with a similar structure to learn it. If we have no prior knowledge about the structure of the reasoning algorithm then neural architecture search over algorithm structures will be needed.
 
 ---
 * [1] [Learning to Simulate Complex Physics with Graph Networks](https://arxiv.org/abs/2002.09405)
