Solve latex issues in weight init (0011) + run 'make server'
Replaced latex equations with images in weight init blog (0011). The
problem is maybe in kramdown or something, multiline equations are not
rendered. Also, ran 'make server'. In Gemfile added google-scholar with
default style (need to adjust style in future).

--- a/_notebooks/2020-07-10-post-0011.ipynb
+++ b/_notebooks/2020-07-10-post-0011.ipynb
@@ -1406,33 +1406,39 @@
     "\n",
     "> Note: $y_l,x_l$ are scalars. $w_l$ is $(1,n_l)$ row-vector. To keep the notation same as the original paper, I did not use the vector notation. From this point on it does not matter much that $w_l$ is a row-vector or not. \n",
     "\n",
-    "For the derivation below, I drop subscript *l* (as it would just clutter the equations). I use the standard formula for Variance to expand the above equation as shown.\n",
-    "\n",
-    "$$\n",
-    "\\begin{split}\n",
-    "Var[y] & = n_l*Var[wx] \\\\\n",
-    " & = n_l*\\left(\\mathbb{E}[(wx)^2]-\\mathbb{E}[wx]^2\\right) \\\\\n",
-    " & = n_l*\\left(\\mathbb{E}[w^2x^2]-(\\mathbb{E}[w]\\mathbb{E}[x]+Cov(w,x))^2\\right) \\\\\n",
-    " & = n_l*\\left(\\underbrace{\\mathbb{E}[w^2]\\mathbb{E}[x^2]+Cov(w^2,x^2)}_{\\mathbb{E}[(wx)^2]}-\\underbrace{(\\mathbb{E}[w]\\mathbb{E}[x]+Cov(w,x))^2}_{\\mathbb{E}[wx]^2}\\right)\n",
-    "\\end{split}\n",
-    "$$\n",
-    "\n",
+    "For the derivation below, I drop subscript *l* (as it would just clutter the equations). I use the standard formula for Variance to expand the above equation as shown."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/post_0011/07.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now we use the fact that $w_l$ and $x_l$ are independent of each other. This means\n",
     "* $Cov(w^2,x^2)=0$\n",
     "* $Cov(w,x)=0$\n",
     "\n",
     "\n",
-    "Also, the weights ($w_l$) have zero mean, as we are sampling the weights from a random normal distribution. I also used the fact that $Var[w_l]=\\mathbb{E}[w_l^2]-\\mathbb{E}[w_l]^2$ where the second term is zero.\n",
-    "\n",
-    "$$\n",
-    "\\begin{equation*}\n",
-    "\\begin{split}\n",
-    "Var[y_l] & =n_l*\\left(\\underbrace{\\mathbb{E}[w_l^2]}_{=Var[w_l]}\\mathbb{E}[x_l^2]-\\underbrace{\\mathbb{E}[w_l]^2}_{=0}\\mathbb{E}[x_l]^2\\right) \\\\\n",
-    "Var[y_l] & = n_lVar[w_l]\\mathbb{E}[x_l^2]\n",
-    "\\end{split}\n",
-    "\\end{equation*}\n",
-    "$$\n",
-    "\n",
+    "Also, the weights ($w_l$) have zero mean, as we are sampling the weights from a random normal distribution. I also used the fact that $Var[w_l]=\\mathbb{E}[w_l^2]-\\mathbb{E}[w_l]^2$ where the second term is zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/post_0011/06.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$Var[x_l] = \\mathbb{E}[x_l^2] - \\mathbb{E}[x_l]^2$. As $x_l$ is output of an activation function (like ReLU), it has non-zero mean, thus $\\mathbb{E}[x_l]\\neq 0$."
    ]
   },
@@ -1505,78 +1511,72 @@
    "source": [
     "We first show that $y_{l-1}$ is symmetric around 0. Formula for $y_{l-1}$ is \n",
     "$$y_{l-1}=w_{l-1}x_{l-1}+b_{l-1}$$\n",
-    "Taking the expectation of above gives:\n",
-    "$$\n",
-    "\\begin{equation*}\n",
-    "\\begin{split}\n",
-    "\\mathbb{E}[y_{l-1}] &= \\mathbb{E}[w_{l-1}x_{l-1}]+\\underbrace{\\mathbb{E}[b_{l-1}]}_{=0\\text{ as vector of 0's}} \\\\\n",
-    " &= \\underbrace{\\mathbb{E}[w_{l-1}]}_{=0}\\mathbb{E}[b_{l-1}] \\\\\n",
-    " &= 0\n",
-    "\\end{split}\n",
-    "\\end{equation*}\n",
-    "$$\n",
-    "\n",
+    "Taking the expectation of above gives:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/post_0011/05.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This shows that $y_{l-1}$ is centered around 0. Also, it is symmetric around 0, as $w_{l-1}$ is symmetric around 0, this combined with the fact that $y_{l-1}$ is centered around 0 gives the conclusion that $y_{l-1}$ is symmetric around 0 (i.e. half probability lies on left of origin and half on right of origin).\n",
     "\n",
-    "The above fact can also be derived mathematically as follows (I drop the $l-1$ subscript for cleaner equations):\n",
-    "$$\n",
-    "\\begin{equation*}\n",
-    "\\begin{split}\n",
-    "\\mathbb{P}(y>0) &= \\mathbb{P}(wx>0) \\\\\n",
-    " &= \\mathbb{P}\\left(\\left(w>0 \\text{ and } x>0\\right)\\text{ or }\\left(w<0 \\text{ and } x<0\\right)\\right) \\\\\n",
-    " &= \\mathbb{P}(w>0)\\mathbb{P}(x>0)+\\mathbb{P}(w<0)\\mathbb{P}(x<0) \\\\\n",
-    " &= \\frac{1}{2}\\mathbb{P}(x>0)+\\frac{1}{2}\\mathbb{P}(x<0) \\\\\n",
-    " &= \\frac{1}{2}\n",
-    "\\end{split}\n",
-    "\\end{equation*}\n",
-    "$$"
+    "The above fact can also be derived mathematically as follows (I drop the $l-1$ subscript for cleaner equations):"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we are ready to compute $\\mathbb{E}[x_l^2]$:\n",
-    "$$\n",
-    "\\begin{equation*}\n",
-    "\\begin{split}\n",
-    "\\mathbb{E}[x_l^2] &= \\mathbb{E}[\\max(0,y_{l_1})^2] \\\\\n",
-    " &= \\underbrace{\\frac{1}{2}\\mathbb{E}[0^2]\\text{ } \\Bigr|_{y_{l-1}\\le 0}}_{=0} + \\frac{1}{2}\\mathbb{E}[y_{l-1}^2]\\text{ }\\Bigr|_{y_{l-1}>0} \\\\\n",
-    " &= \\frac{1}{2}\\mathbb{E}[y_{l-1}^2] \\\\\n",
-    " &= \\frac{1}{2}Var[y_{l-1}]\n",
-    "\\end{split}\n",
-    "\\end{equation*}\n",
-    "$$"
+    "![](images/post_0011/03.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using this result in the equation of variance we have:\n",
-    "$$\n",
-    "\\begin{equation*}\n",
-    "\\begin{split}\n",
-    "Var[y_l] &= n_lVar[w_l]\\mathbb{E}[x_l^2] \\\\\n",
-    " &= \\frac{1}{2}n_lVar[w_l]Var[y_{l-1}] \\\\\n",
-    "\\end{split}\n",
-    "\\end{equation*}\n",
-    "$$"
+    "Now we are ready to compute $\\mathbb{E}[x_l^2]$:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With $L$ layers put together, we have\n",
-    "$$\n",
-    "\\begin{equation*}\n",
-    "\\begin{split}\n",
-    "Var[y_L] &= Var[y_1]*Var[y_2]\\cdots*Var[y_{L-1}] \\\\\n",
-    " &= Var[y_1]\\left(\\prod\\limits_{l=2}^{L}\\frac{1}{2}n_lVar[w_l]\\right)\n",
-    "\\end{split}\n",
-    "\\end{equation*}\n",
-    "$$"
+    "![](images/post_0011/02.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this result in the equation of variance we have:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/post_0011/04.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With $L$ layers put together, we have"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/post_0011/01.png)"
    ]
   },
   {
@@ -1614,7 +1614,11 @@
    "metadata": {},
    "source": [
     "### General Recipe for any activation function\n",
-    "1. Find $$\\mathbb{E}[x_l^2]=\\mathbb{E}[\\text{activation_function}(y_l)], \\text{  where }y_l=w_{l-1}x_{l-1}+b_{l-1}$$ in terms of $Var[y_{l-1}]$. Use the fact that $y_{l-1}$ is symmetric around 0.\n",
+    "1. Find \n",
+    "\n",
+    "    $$\\mathbb{E}[x_l^2]=\\mathbb{E}[activation\\_function(y_l)],\\ where\\ y_l=w_{l-1}x_{l-1}+b_{l-1}$$ \n",
+    "\n",
+    "in terms of $Var[y_{l-1}]$. Use the fact that $y_{l-1}$ is symmetric around 0.\n",
     "2. Use the above value to find variance of layer l\n",
     "$$Var[y_l] = n_lVar[w_l]\\mathbb{E}[x_l^2]$$\n",
     "3. Compute the variance at the last layer $$Var[y_L] = Var[y_1]*Var[y_2]\\cdots*Var[y_{L-1}]$$.\n",
@@ -1640,16 +1644,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 1**: Find $\\mathbb{E}[x_l^2]$ in terms of $Var[y_{l-1}]$.\n",
-    "$$\n",
-    "\\begin{split}\n",
-    "\\mathbb{E}[x_l^2] &= \\mathbb{E}[\\max(ay_{l-1},y_{l-1})^2] \\\\\n",
-    " &= \\frac{1}{2}\\mathbb{E}[a^2y_{l-1}^2]\\text{ } \\Bigr|_{y_{l-1}\\le 0} + \\frac{1}{2}\\mathbb{E}[y_{l-1}^2]\\text{ }\\Bigr|_{y_{l-1}>0} \\\\\n",
-    " &= \\frac{1}{2}a^2\\mathbb{E}[y_{l-1}^2]\\text{ } \\Bigr|_{y_{l-1}\\le 0} + \\frac{1}{2}\\mathbb{E}[y_{l-1}^2]\\text{ }\\Bigr|_{y_{l-1}>0} \\\\\n",
-    " &= \\frac{1}{2}a^2Var[y_{l-1}]+\\frac{1}{2}Var[y_{l-1}] \\\\\n",
-    " &= \\frac{1+a^2}{2}Var[y_{l-1}]\n",
-    "\\end{split}\n",
-    "$$"
+    "**Step 1**: Find $\\mathbb{E}[x_l^2]$ in terms of $Var[y_{l-1}]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/post_0011/00.png)"
    ]
   },
   {
@@ -1683,12 +1685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\begin{split}\n",
-    "\\frac{1+a^2}{2}n_lVar[w_l] &= 1 \\\\\n",
-    "Var[w_l] &= \\frac{2}{1+a^2}\n",
-    "\\end{split}\n",
-    "$$"
+    "$$\\frac{1+a^2}{2}n_lVar[w_l] = 1\\\\Var[w_l] = \\frac{2}{1+a^2}$$"
    ]
   },
   {
