--- a/_posts/2020-07-10-post-0011.md
+++ b/_posts/2020-07-10-post-0011.md
@@ -20,13 +20,6 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
-    {% raw %}
-    
-<div class="cell border-box-sizing code_cell rendered">
-
-</div>
-    {% endraw %}
-
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>The following papers are discussed in this post:</p>
@@ -132,8 +125,7 @@ layout: notebook
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Normalize input data (mean=0, std=1)</span>
-<span class="n">train_mean</span><span class="p">,</span> <span class="n">train_std</span> <span class="o">=</span> <span class="n">x_train</span><span class="o">.</span><span class="n">mean</span><span class="p">(),</span> <span class="n">x_train</span><span class="o">.</span><span class="n">std</span><span class="p">()</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">train_mean</span><span class="p">,</span> <span class="n">train_std</span> <span class="o">=</span> <span class="n">x_train</span><span class="o">.</span><span class="n">mean</span><span class="p">(),</span> <span class="n">x_train</span><span class="o">.</span><span class="n">std</span><span class="p">()</span>
 
 <span class="n">x_train</span> <span class="o">=</span> <span class="n">normalize</span><span class="p">(</span><span class="n">x_train</span><span class="p">,</span> <span class="n">train_mean</span><span class="p">,</span> <span class="n">train_std</span><span class="p">)</span>
 <span class="n">x_valid</span> <span class="o">=</span> <span class="n">normalize</span><span class="p">(</span><span class="n">x_valid</span><span class="p">,</span> <span class="n">train_mean</span><span class="p">,</span> <span class="n">train_std</span><span class="p">)</span> <span class="c1"># use training stats for validation set also</span>
@@ -328,8 +320,7 @@ layout: notebook
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Get random weights</span>
-<span class="n">w1</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">m</span><span class="p">,</span><span class="n">nh</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">w1</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">m</span><span class="p">,</span><span class="n">nh</span><span class="p">)</span>
 <span class="n">b1</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="n">nh</span><span class="p">)</span> <span class="c1"># bias initialized to 0</span>
 <span class="n">w2</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="n">nh</span><span class="p">,</span><span class="mi">1</span><span class="p">)</span>
 <span class="n">b2</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>
@@ -368,8 +359,7 @@ layout: notebook
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Input is normalized to mean=0, std=1</span>
-<span class="n">stats</span><span class="p">(</span><span class="n">x_valid</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">stats</span><span class="p">(</span><span class="n">x_valid</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -947,8 +937,7 @@ layout: notebook
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># A quick training loop</span>
-<span class="k">for</span> <span class="n">epoch</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">70</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">epoch</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">70</span><span class="p">):</span>
     <span class="n">running_loss</span> <span class="o">=</span> <span class="o">.</span><span class="mi">0</span>
     <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">data</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">dataloader</span><span class="p">,</span><span class="mi">0</span><span class="p">):</span>
         <span class="n">inputs</span><span class="p">,</span> <span class="n">labels</span> <span class="o">=</span> <span class="n">data</span>
@@ -1238,8 +1227,7 @@ layout: notebook
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># A quick training loop</span>
-<span class="k">for</span> <span class="n">epoch</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">70</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">epoch</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">70</span><span class="p">):</span>
     <span class="n">running_loss</span> <span class="o">=</span> <span class="o">.</span><span class="mi">0</span>
     <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">data</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">dataloader</span><span class="p">,</span><span class="mi">0</span><span class="p">):</span>
         <span class="n">inputs</span><span class="p">,</span> <span class="n">labels</span> <span class="o">=</span> <span class="n">data</span>
@@ -1681,27 +1669,39 @@ $$Var[y_l] = n_l*Var[w_lx_l]$$
 {% endraw %}
 {% include note.html content='$y_l,x_l$ are scalars. $w_l$ is $(1,n_l)$ row-vector. To keep the notation same as the original paper, I did not use the vector notation. From this point on it does not matter much that $w_l$ is a row-vector or not. ' %}
 For the derivation below, I drop subscript <em>l</em> (as it would just clutter the equations). I use the standard formula for Variance to expand the above equation as shown.</p>
-$$
-\begin{split}
-Var[y] &amp; = n_l*Var[wx] \\
- &amp; = n_l*\left(\mathbb{E}[(wx)^2]-\mathbb{E}[wx]^2\right) \\
- &amp; = n_l*\left(\mathbb{E}[w^2x^2]-(\mathbb{E}[w]\mathbb{E}[x]+Cov(w,x))^2\right) \\
- &amp; = n_l*\left(\underbrace{\mathbb{E}[w^2]\mathbb{E}[x^2]+Cov(w^2,x^2)}_{\mathbb{E}[(wx)^2]}-\underbrace{(\mathbb{E}[w]\mathbb{E}[x]+Cov(w,x))^2}_{\mathbb{E}[wx]^2}\right)
-\end{split}
-$$<p>Now we use the fact that $w_l$ and $x_l$ are independent of each other. This means</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="/blog/images/copied_from_nb/images/post_0011/07.png" alt=""></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Now we use the fact that $w_l$ and $x_l$ are independent of each other. This means</p>
 <ul>
 <li>$Cov(w^2,x^2)=0$</li>
 <li>$Cov(w,x)=0$</li>
 </ul>
 <p>Also, the weights ($w_l$) have zero mean, as we are sampling the weights from a random normal distribution. I also used the fact that $Var[w_l]=\mathbb{E}[w_l^2]-\mathbb{E}[w_l]^2$ where the second term is zero.</p>
-$$
-\begin{equation*}
-\begin{split}
-Var[y_l] &amp; =n_l*\left(\underbrace{\mathbb{E}[w_l^2]}_{=Var[w_l]}\mathbb{E}[x_l^2]-\underbrace{\mathbb{E}[w_l]^2}_{=0}\mathbb{E}[x_l]^2\right) \\
-Var[y_l] &amp; = n_lVar[w_l]\mathbb{E}[x_l^2]
-\end{split}
-\end{equation*}
-$$<p>$Var[x_l] = \mathbb{E}[x_l^2] - \mathbb{E}[x_l]^2$. As $x_l$ is output of an activation function (like ReLU), it has non-zero mean, thus $\mathbb{E}[x_l]\neq 0$.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="/blog/images/copied_from_nb/images/post_0011/06.png" alt=""></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>$Var[x_l] = \mathbb{E}[x_l^2] - \mathbb{E}[x_l]^2$. As $x_l$ is output of an activation function (like ReLU), it has non-zero mean, thus $\mathbb{E}[x_l]\neq 0$.</p>
 
 </div>
 </div>
@@ -1786,76 +1786,71 @@ $$Var[y_l] = n_lVar[w_l]\mathbb{E}[x_l^2]$$
 {% raw %}
 $$y_{l-1}=w_{l-1}x_{l-1}+b_{l-1}$$
 {% endraw %}
-Taking the expectation of above gives:
-$$
-\begin{equation*}
-\begin{split}
-\mathbb{E}[y_{l-1}] &amp;= \mathbb{E}[w_{l-1}x_{l-1}]+\underbrace{\mathbb{E}[b_{l-1}]}_{=0\text{ as vector of 0's}} \\
- &amp;= \underbrace{\mathbb{E}[w_{l-1}]}_{=0}\mathbb{E}[b_{l-1}] \\
- &amp;= 0
-\end{split}
-\end{equation*}
-$$</p>
+Taking the expectation of above gives:</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="/blog/images/copied_from_nb/images/post_0011/05.png" alt=""></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>This shows that $y_{l-1}$ is centered around 0. Also, it is symmetric around 0, as $w_{l-1}$ is symmetric around 0, this combined with the fact that $y_{l-1}$ is centered around 0 gives the conclusion that $y_{l-1}$ is symmetric around 0 (i.e. half probability lies on left of origin and half on right of origin).</p>
-<p>The above fact can also be derived mathematically as follows (I drop the $l-1$ subscript for cleaner equations):
-$$
-\begin{equation*}
-\begin{split}
-\mathbb{P}(y&gt;0) &amp;= \mathbb{P}(wx&gt;0) \\
- &amp;= \mathbb{P}\left(\left(w&gt;0 \text{ and } x&gt;0\right)\text{ or }\left(w&lt;0 \text{ and } x&lt;0\right)\right) \\
- &amp;= \mathbb{P}(w&gt;0)\mathbb{P}(x&gt;0)+\mathbb{P}(w&lt;0)\mathbb{P}(x&lt;0) \\
- &amp;= \frac{1}{2}\mathbb{P}(x&gt;0)+\frac{1}{2}\mathbb{P}(x&lt;0) \\
- &amp;= \frac{1}{2}
-\end{split}
-\end{equation*}
-$$</p>
+<p>The above fact can also be derived mathematically as follows (I drop the $l-1$ subscript for cleaner equations):</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now we are ready to compute $\mathbb{E}[x_l^2]$:
-$$
-\begin{equation*}
-\begin{split}
-\mathbb{E}[x_l^2] &amp;= \mathbb{E}[\max(0,y_{l_1})^2] \\
- &amp;= \underbrace{\frac{1}{2}\mathbb{E}[0^2]\text{ } \Bigr|_{y_{l-1}\le 0}}_{=0} + \frac{1}{2}\mathbb{E}[y_{l-1}^2]\text{ }\Bigr|_{y_{l-1}&gt;0} \\
- &amp;= \frac{1}{2}\mathbb{E}[y_{l-1}^2] \\
- &amp;= \frac{1}{2}Var[y_{l-1}]
-\end{split}
-\end{equation*}
-$$</p>
+<p><img src="/blog/images/copied_from_nb/images/post_0011/03.png" alt=""></p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Using this result in the equation of variance we have:
-$$
-\begin{equation*}
-\begin{split}
-Var[y_l] &amp;= n_lVar[w_l]\mathbb{E}[x_l^2] \\
- &amp;= \frac{1}{2}n_lVar[w_l]Var[y_{l-1}] \\
-\end{split}
-\end{equation*}
-$$</p>
+<p>Now we are ready to compute $\mathbb{E}[x_l^2]$:</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>With $L$ layers put together, we have
-$$
-\begin{equation*}
-\begin{split}
-Var[y_L] &amp;= Var[y_1]*Var[y_2]\cdots*Var[y_{L-1}] \\
- &amp;= Var[y_1]\left(\prod\limits_{l=2}^{L}\frac{1}{2}n_lVar[w_l]\right)
-\end{split}
-\end{equation*}
-$$</p>
+<p><img src="/blog/images/copied_from_nb/images/post_0011/02.png" alt=""></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Using this result in the equation of variance we have:</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="/blog/images/copied_from_nb/images/post_0011/04.png" alt=""></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>With $L$ layers put together, we have</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="/blog/images/copied_from_nb/images/post_0011/01.png" alt=""></p>
 
 </div>
 </div>
@@ -1885,8 +1880,7 @@ $$\frac{1}{2}n_lVar[w_l] = 1, \text{   }\forall l$$
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># PyTorch uses the transpose of the weight matrix internally</span>
-<span class="c1"># so n_l in this case is 784 (i.e. preserve standard deviation</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># so n_l in this case is 784 (i.e. preserve standard deviation</span>
 <span class="c1"># along the forward pass). </span>
 <span class="n">weights</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">randn</span><span class="p">(</span><span class="mi">784</span><span class="p">,</span><span class="mi">10</span><span class="p">)</span><span class="o">*</span><span class="n">math</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="mi">2</span><span class="o">/</span><span class="mi">784</span><span class="p">)</span>
 </pre></div>
@@ -1901,7 +1895,12 @@ $$\frac{1}{2}n_lVar[w_l] = 1, \text{   }\forall l$$
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="General-Recipe-for-any-activation-function">General Recipe for any activation function<a class="anchor-link" href="#General-Recipe-for-any-activation-function"> </a></h3><ol>
-<li>Find $$\mathbb{E}[x_l^2]=\mathbb{E}[\text{activation_function}(y_l)], \text{  where }y_l=w_{l-1}x_{l-1}+b_{l-1}$$ in terms of $Var[y_{l-1}]$. Use the fact that $y_{l-1}$ is symmetric around 0.</li>
+<li><p>Find</p>
+<p>$$\mathbb{E}[x_l^2]=\mathbb{E}[activation\_function(y_l)],\ where\ y_l=w_{l-1}x_{l-1}+b_{l-1}$$</p>
+</li>
+</ol>
+<p>in terms of $Var[y_{l-1}]$. Use the fact that $y_{l-1}$ is symmetric around 0.</p>
+<ol>
 <li>Use the above value to find variance of layer l
 {% raw %}
 $$Var[y_l] = n_lVar[w_l]\mathbb{E}[x_l^2]$$
@@ -1928,16 +1927,14 @@ $$
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Step 1</strong>: Find $\mathbb{E}[x_l^2]$ in terms of $Var[y_{l-1}]$.
-$$
-\begin{split}
-\mathbb{E}[x_l^2] &amp;= \mathbb{E}[\max(ay_{l-1},y_{l-1})^2] \\
- &amp;= \frac{1}{2}\mathbb{E}[a^2y_{l-1}^2]\text{ } \Bigr|_{y_{l-1}\le 0} + \frac{1}{2}\mathbb{E}[y_{l-1}^2]\text{ }\Bigr|_{y_{l-1}&gt;0} \\
- &amp;= \frac{1}{2}a^2\mathbb{E}[y_{l-1}^2]\text{ } \Bigr|_{y_{l-1}\le 0} + \frac{1}{2}\mathbb{E}[y_{l-1}^2]\text{ }\Bigr|_{y_{l-1}&gt;0} \\
- &amp;= \frac{1}{2}a^2Var[y_{l-1}]+\frac{1}{2}Var[y_{l-1}] \\
- &amp;= \frac{1+a^2}{2}Var[y_{l-1}]
-\end{split}
-$$</p>
+<p><strong>Step 1</strong>: Find $\mathbb{E}[x_l^2]$ in terms of $Var[y_{l-1}]$.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="/blog/images/copied_from_nb/images/post_0011/00.png" alt=""></p>
 
 </div>
 </div>
@@ -1971,12 +1968,10 @@ $$</p>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-$$
-\begin{split}
-\frac{1+a^2}{2}n_lVar[w_l] &amp;= 1 \\
-Var[w_l] &amp;= \frac{2}{1+a^2}
-\end{split}
-$$
+<p>{% raw %}
+$$\frac{1+a^2}{2}n_lVar[w_l] = 1\\Var[w_l] = \frac{2}{1+a^2}$$
+{% endraw %}</p>
+
 </div>
 </div>
 </div>
